--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>	<html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7]>		<html class="no-js lt-ie9 lt-ie8"><![endif]-->
-<!--[if IE 8]>		<html class="no-js lt-ie9"><![endif]-->
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Plastov Award</title>
 	<meta name="description" content="">
-	<meta name="viewport" content="initial-scale=1,maximum-scale=1,width=1150">
+	<meta name="viewport" content="width=1024, initial-scale=0.8, maximum-scale=1">
 
 	<link rel="stylesheet" href="/css/normalize.css">
 	<link rel="stylesheet" href="/css/jquery.jscrollpane.css">
@@ -114,9 +114,8 @@
 <script type="text/javascript" src="/js/plax.js"></script>
 <script type="text/javascript" src="/js/cusel-min-2.5.js"></script>
 <script type="text/javascript" src="/js/jquery.ezmark.min.js"></script>
-<!-- <script type="text/javascript" src="/js/jgestures.min.js"></script> -->
-
-
+<script type="text/javascript" src="/js/jgestures.min.js"></script>
+<script type="text/javascript" src="/js/jquery.fancybox.pack.js"></script>
 <script type="text/javascript" src="/js/fineuploader/util.js"></script>
 <script type="text/javascript" src="/js/fineuploader/button.js"></script>
 <script type="text/javascript" src="/js/fineuploader/handler.base.js"></script>
@@ -126,9 +125,6 @@
 <script type="text/javascript" src="/js/fineuploader/dnd.js"></script>
 <script type="text/javascript" src="/js/fineuploader/uploader.js"></script>
 <script type="text/javascript" src="/js/fineuploader/jquery-plugin.js"></script>
-
-<script type="text/javascript" src="/js/jquery.fancybox.pack.js"></script>
-
 <script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
