replace cursor mobile device

--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -107,14 +107,14 @@
 
 
 <script type="text/javascript" src="/js/vendor/jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="/js/plugins.js"></script>
 <script type="text/javascript" src="/js/jquery.jscrollpane.min.js"></script>
 <script type="text/javascript" src="/js/jquery.carouFredSel-6.1.0-packed.js"></script>
 <script type="text/javascript" src="/js/jquery.placeholder.js"></script>
 <script type="text/javascript" src="/js/plax.js"></script>
 <script type="text/javascript" src="/js/cusel-min-2.5.js"></script>
 <script type="text/javascript" src="/js/jquery.ezmark.min.js"></script>
-<script type="text/javascript" src="/js/jgestures.min.js"></script>
+<script type="text/javascript" src="/js/hammer.js"></script>
+<script type="text/javascript" src="/js/jquery.specialevent.hammer.js"></script>
 <script type="text/javascript" src="/js/jquery.fancybox.pack.js"></script>
 <script type="text/javascript" src="/js/fineuploader/util.js"></script>
 <script type="text/javascript" src="/js/fineuploader/button.js"></script>
