--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -10,6 +10,8 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=1024, initial-scale=0.7, maximum-scale=1">
 
+	<link rel="shortcut icon" type="image/ico" href="/img/favicon.ico" />
+
 	<link rel="stylesheet" href="/css/normalize.css">
 	<link rel="stylesheet" href="/css/jquery.jscrollpane.css">
 	<link rel="stylesheet" href="/css/jquery.fancybox.css">
