some changes. optimize main page loading

--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -49,9 +49,9 @@
           <% end %>
 				</ul>
 				<ul class="social-networks">
-					<li><a href="<%= Settings.twitter_url %>" target="_blank"><img src="/img/icon-twitter.png" width="8" height="13" alt="" title="" /></a></li>
-					<li><a href="<%= Settings.facebook_url %>" target="_blank"><img src="/img/icon-facebook.png" width="8" height="15" alt="" title="" /></a></li>
-					<li><a href="<%= Settings.vkontakte_url %>" target="_blank"><img src="/img/icon-vk.png" width="20" height="13" alt="" title="" /></a></li>
+					<li><a href="<%= settings[:twitter_url] %>" target="_blank"><img src="/img/icon-twitter.png" width="8" height="13" alt="" title="" /></a></li>
+					<li><a href="<%= settings[:facebook_url] %>" target="_blank"><img src="/img/icon-facebook.png" width="8" height="15" alt="" title="" /></a></li>
+					<li><a href="<%= settings[:vkontakte_url] %>" target="_blank"><img src="/img/icon-vk.png" width="20" height="13" alt="" title="" /></a></li>
 				</ul>
 			</div>
 		</section>
