--- a/app/views/feedback_mailer/info_email.text.erb
+++ b/app/views/feedback_mailer/info_email.text.erb
@@ -1,6 +1,6 @@
-Thank you for your question!
+На сайте plastovawards.com был задан новый вопрос!
 
-Email: <%= @feed.email %>
-Phone: <%= @feed.phone %>
-Text: 
+E-mail автора: <%= @feed.email %>
+Телефон автора: <%= @feed.phone %>
+Вопрос: 
 <%= @feed.text %>
